# infodb

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/infodb/: __init__.py  __main__.py  db.py  util.py
