# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "infodb"
description = "To store personal data in couchdb and access it"
readme = "README.md"
authors = [{ name = "Shubh", email = "shubhvjain@gmail.com" }]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Terminals"
]
keywords = ["couchdb", "database"]
dependencies = [
    'tomli; python_version < "3.11"',
    "couchdb",
    "jsonschema"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/shubhvjain/infodb"
